force-app/main/default/objects/Opportunity/fields/JIRA_Fix_Version_Name__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Fix_Version_Name__c</fullName>
    <label>JIRA Fix Version Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>