force-app/main/default/objects/Opportunity/fields/JIRA_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Project_Id__c</fullName>
    <formula>Account.JIRA_Project_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JIRA Project Id</label>
    <type>Text</type>
</CustomField>