force-app/main/default/objects/Opportunity/fields/JIRA_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Version_Id__c</fullName>
    <externalId>true</externalId>
    <label>JIRA Version Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>